--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,8 +1,75 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+    <children>
+        <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0">
+            <columns>
+                <TableColumn fx:id="colAzon" prefWidth="112.0" text="Azonosító" />
+                <TableColumn fx:id="colNev" prefWidth="112.0" text="Név" />
+                <TableColumn fx:id="colEgys" prefWidth="112.0" text="Egységár(Ft)" />
+                <TableColumn fx:id="colDb" prefWidth="112.0" text="Eladott Darabszám" />
+                <TableColumn fx:id="colAkc" prefWidth="112.0" text="Akciós" />
+            </columns>
+            <VBox.margin>
+                <Insets left="20.0" right="20.0" />
+            </VBox.margin>
+        </TableView>
+      <HBox>
+         <children>
+            <VBox>
+               <children>
+                  <Button mnemonicParsing="false" prefWidth="150.0" text="Legdrgább pizza">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" prefWidth="150.0" text="Összes bevétel Ft">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" prefWidth="150.0" text="Drágább 2500-nál százalék">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" prefWidth="150.0" text="Akciósak fáljbaír">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+               <HBox.margin>
+                  <Insets left="20.0" right="20.0" top="20.0" />
+               </HBox.margin>
+            </VBox>
+            <VBox>
+               <children>
+                  <Button mnemonicParsing="false" prefWidth="150.0" text="Fájl beolvas">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" prefWidth="150.0" text="Hibás adat törlése">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" prefWidth="150.0" text="Kilép">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+               <HBox.margin>
+                  <Insets left="20.0" right="20.0" top="20.0" />
+               </HBox.margin>
+            </VBox>
+         </children>
+      </HBox>
+    </children>
+</VBox>
